tests/errors/sem.too-many-args.struct-init-list.or
main :: () -> void {
    T :: struct { x := 0; };
    T.{1, 2, 3};
};
